2009-02-25  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Make sure we always keep in sync the file cache with the
	database. Add a deletes cache to store files that have been
	deleted or replaced but might be still referenced. 
	
2009-02-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBTempLog.py:

	Split the temp_log query into several queries to save memory.
	
2009-02-23  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBContentHandler.py:

	Add tests for DBContentHandler.
	
2009-02-20  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/DBProxyContentHandler.py:
	* pycvsanaly2/DBTempLog.py:

	Limit the maximun size of the queues used in ProxyContentHandler
	and TempLog. It saves a lot of memory. Hopefully OOM issues are 
	fixed now. 
	
2009-02-20  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/AsyncQueue.py:

	Add optional queue max size, bloking on put() when the queue reaches
	such a max size.
	
2009-02-18  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/SVNParser.py:

	Use the number of lines given by the log for the commit message
	instead of guessing it. It fixes (hopefully) all the parsing
	warnings in SVN.
	
2009-02-18  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/SVNParser.py:

	Ignore invalid commits. In asterisk we have found commits like
	this:

	r176840 | (no author) | (no date) | 1 line

	without any changed path. I don't know what it is, but it doesn't
	seem to be useful at all.
	
2009-02-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* setup.py:

	Install man page.
	
2009-02-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* TODO:

	Updated.
	
2009-02-13  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Raise ExtensionRunError exception instead of showing an error
	message when the repository creation fails, since the extension 
	can't continue without a repository object.
	