@@ -1,5 +1,12 @@
 2009-02-25  Carlos Garcia Campos  <carlosgc@gsyc.es>
 
+	* pycvsanaly2/extensions/FileTypes.py:
+
+	Fix FileTypes query and remove field commit_id from the table
+	since it doesn't really make sense.
+	
+2009-02-25  Carlos Garcia Campos  <carlosgc@gsyc.es>
+
 	* pycvsanaly2/DBContentHandler.py:
 
 	Make sure we always keep in sync the file cache with the
